Scraper index module separate

--- a/scrapers/CompanyIndexScraper.ipynb
+++ b/scrapers/CompanyIndexScraper.ipynb
@@ -2,194 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bs4 import BeautifulSoup\n",
-    "import numpy as np\n",
-    "import requests"
+    "from scripts import CompanyIndexScraper"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "request = requests.get(\"https://www.biznesradar.pl/wskazniki-wartosci-rynkowej/GIG\", allow_redirects=False)\n",
-    "html_code = BeautifulSoup(request.content, 'html.parser')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class CompanyIndexScraper:\n",
-    "    SKELETON_URL = \"https://www.biznesradar.pl\"\n",
-    "    INDEXES_TO_SCRAP = {\n",
-    "        \"wskazniki-wartosci-rynkowej\" : [\n",
-    "            \"Cena / Wartość księgowa\",\n",
-    "            \"Cena / Wartość księgowa Grahama\",\n",
-    "            \"Cena / Przychody ze sprzedaży\",\n",
-    "            \"Cena / Zysk\",\n",
-    "            \"Cena / Zysk operacyjny\",\n",
-    "            \"EV / Przychody ze sprzedaży\",\n",
-    "            \"EV / EBIT\",\n",
-    "            \"EV / EBITDA\",\n",
-    "        ],\n",
-    "        \"wskazniki-rentownosci\" : [\n",
-    "            \"ROE\",\n",
-    "            \"ROA\",\n",
-    "            \"Marża zysku operacyjnego\",\n",
-    "            \"Marża zysku netto\",\n",
-    "            \"Marża zysku ze sprzedaży\",\n",
-    "            \"Marża zysku brutto\",\n",
-    "            \"Marża zysku brutto ze sprzedaży\",\n",
-    "            \"Rentowność operacyjna aktywów\",\n",
-    "        ],\n",
-    "        \"wskazniki-przeplywow-pienieznych\" : [\n",
-    "            \"Udział zysku netto w przepływach operacyjnych\",\n",
-    "            \"Wskaźnik źródeł finansowania inwestycji\",\n",
-    "        ],\n",
-    "        \"wskazniki-zadluzenia\" : [\n",
-    "            \"Zadłużenie ogólne\",\n",
-    "            \"Zadłużenie kapitału własnego\",\n",
-    "            \"Zastosowanie kapitału obcego\",\n",
-    "            \"Wskaźnik ogólnej sytuacji finansowej\",\n",
-    "        ],\n",
-    "        \"wskazniki-plynnosci\" : [\n",
-    "            \"I stopień pokrycia\",\n",
-    "            \"Płynność gotówkowa\",\n",
-    "            \"Płynność szybka\",\n",
-    "            \"Płynność bieżąca\",\n",
-    "            \"Pokrycie zobowiązań należnościami\",\n",
-    "        ],\n",
-    "    }\n",
-    "\n",
-    "    DATA_TYPE = [\n",
-    "        \"Company\",\n",
-    "        \"Sector\",\n",
-    "        \"CompanyY/Y\",\n",
-    "        \"SectorY/Y\",\n",
-    "        \"CompanyQ/Q\",\n",
-    "        \"SectorQ/Q\",\n",
-    "    ]\n",
-    "\n",
-    "    def __init__(self):\n",
-    "        self.dates_header_ = None\n",
-    "        self.html_table_   = None\n",
-    "        self.data_array_   = None\n",
-    "        self.columns_name_ = sum(CompanyIndexScraper.INDEXES_TO_SCRAP.values(), [])\n",
-    "\n",
-    "\n",
-    "    def __generate_url_address(self, indexes_type : str, ticker : str) -> str:\n",
-    "        return f\"{CompanyIndexScraper.SKELETON_URL}/{indexes_type}/{ticker}\"\n",
-    "    \n",
-    "\n",
-    "    def __download_http_response(self, url : str) -> BeautifulSoup:\n",
-    "        request = requests.get(url, allow_redirects=False)\n",
-    "        # If ticker is different or if it is shortcuts\n",
-    "        if request.status_code == 301:\n",
-    "            url = f\"{CompanyIndexScraper.SKELETON_URL}{request.headers['Location']}\"\n",
-    "            request = requests.get(url)\n",
-    "        # If some error with request raise exception\n",
-    "        if request.status_code != 200:\n",
-    "            raise Exception(f\"Download http response error code: {request.status_code} on address {url}\")\n",
-    "        return BeautifulSoup(request.content, 'html.parser')\n",
-    "\n",
-    "\n",
-    "    def __download_and_prepare_html_table(self, indexes_key : str, ticker : str) -> None:\n",
-    "        url = self.__generate_url_address(indexes_key, ticker)\n",
-    "        html_response = self.__download_http_response(url)\n",
-    "        self.html_table_ = html_response.find(\"table\", attrs={\"class\":\"report-table\"}) \n",
-    "\n",
-    "\n",
-    "    def __scrap_header_date(self):\n",
-    "        header_row = self.html_table_.find(\"tr\")\n",
-    "        self.dates_header_ = {\"Date\": [\"\".join(date.text.split()).split('(')[0] for date in header_row.find_all(\"th\", attrs={\"class\":\"thq h\"})]}\n",
-    "\n",
-    "\n",
-    "    def __prepare_data_space(self) -> None:\n",
-    "        # Before use dates_header_ should be initialized \n",
-    "        self.data_array_ = np.empty((len(CompanyIndexScraper.DATA_TYPE), len(self.columns_name_), len(self.dates_header_[\"Date\"])))\n",
-    "        self.data_array_[:] = np.nan\n",
-    "    \n",
-    "\n",
-    "    def __scrap_data_table(self, index_key : str) -> None:\n",
-    "        data_rows = self.html_table_.find_all(\"tr\")[1:] # Omit header line\n",
-    "        for row in data_rows:\n",
-    "            self.__scrap_data_row(index_key, row) \n",
-    "\n",
-    "\n",
-    "    def __scrap_data_row(self, index_key : str, row : BeautifulSoup) -> None:\n",
-    "        # Check is row to scrap \n",
-    "        row_header = row.find(\"td\", attrs={\"class\":\"f\"}).text\n",
-    "        # If row not in INDEXES_TO_SCRAP omit row\n",
-    "        if row_header not in CompanyIndexScraper.INDEXES_TO_SCRAP[index_key]:\n",
-    "            return\n",
-    "        \n",
-    "        cells = row.find_all(\"td\", attrs={\"class\":\"h\"})[:-1]\n",
-    "        n_row = self.columns_name_.index(row_header)\n",
-    "        for n_col, cell in enumerate(cells):\n",
-    "            self.__scrap_data_cell(cell, n_row, n_col) \n",
-    "    \n",
-    "    \n",
-    "    def __scrap_data_cell(self, cell : BeautifulSoup, n_row : int, n_col : int) -> None:\n",
-    "        # Index company value\n",
-    "        raw_section = cell.find(\"span\", attrs={\"class\": \"value\"})\n",
-    "        if raw_section:\n",
-    "            self.data_array_[0, n_row, n_col] = float(raw_section.find(\"span\", attrs={\"class\":\"pv\"})\n",
-    "                                                      .text.replace(\"%\", \"\").replace(\" \", \"\"))\n",
-    "        # Index sector value\n",
-    "        raw_section = cell.find(\"span\", attrs={\"class\": \"sectorv\"})\n",
-    "        if raw_section:\n",
-    "            self.data_array_[1, n_row, n_col] = float(raw_section.find(\"span\", attrs={\"class\":\"pv\"})\n",
-    "                                                      .text.replace(\"%\", \"\").replace(\" \", \"\"))\n",
-    "        # Change Q/Q\n",
-    "        raw_section = cell.find(\"div\", attrs={\"class\": \"changeqq\"})\n",
-    "        if raw_section:\n",
-    "            self.data_array_[2, n_row, n_col] = float(raw_section.find(\"span\", attrs={\"class\":\"pv\"})\n",
-    "                                                      .text.replace(\"%\", \"\").replace(\" \", \"\"))\n",
-    "            self.data_array_[3, n_row, n_col] = float(raw_section.find(\"span\", attrs={\"class\":\"sectorv\"})\n",
-    "                                                    .find(\"span\", attrs={\"class\":\"pv\"}).text.replace(\"%\", \"\").replace(\" \", \"\"))\n",
-    "        # Change Y/Y\n",
-    "        raw_section = cell.find(\"div\", attrs={\"class\": \"changeyy\"})\n",
-    "        if raw_section:\n",
-    "            self.data_array_[4, n_row, n_col] = float(raw_section.find(\"span\", attrs={\"class\":\"pv\"})\n",
-    "                                                      .text.replace(\"%\", \"\").replace(\" \", \"\"))\n",
-    "            self.data_array_[5, n_row, n_col] = float(raw_section.find(\"span\", attrs={\"class\":\"sectorv\"})\n",
-    "                                                  .find(\"span\", attrs={\"class\":\"pv\"}).text.replace(\"%\", \"\").replace(\" \", \"\"))\n",
-    "\n",
-    "\n",
-    "    def scrap_data(self, ticker : str):\n",
-    "        is_first = True\n",
-    "        for index_key in CompanyIndexScraper.INDEXES_TO_SCRAP.keys():\n",
-    "            self.__download_and_prepare_html_table(index_key, ticker)\n",
-    "            if is_first:\n",
-    "                is_first = False\n",
-    "                self.__scrap_header_date()\n",
-    "                self.__prepare_data_space()\n",
-    "            self.__scrap_data_table(index_key)\n",
-    "            \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cis = CompanyIndexScraper()\n",
-    "cis.scrap_data(\"ATR\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -614,15 +436,15 @@
        "[63 rows x 27 columns]"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "pd.DataFrame(data = cis.data_array_[0], index=cis.columns_name_, columns=cis.dates_header_[\"Date\"]).T"
+    "cis = CompanyIndexScraper()\n",
+    "cis.scrap_data(\"ATR\")\n",
+    "cis.get_report_index(CompanyIndexScraper.IndexType.COMPANY)"
    ]
   }
  ],
@@ -642,7 +464,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
