Update dates scraper

--- a/scrapers/CompanyIndexScraper.ipynb
+++ b/scrapers/CompanyIndexScraper.ipynb
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,16 +486,17 @@
     "import pandas as pd\n",
     "\n",
     "cis = CompanyIndexScraper()\n",
+    "ds  = DatesScraper() \n",
     "COMPANY_TICKER_LIST = pd.read_csv(\"../database/designData/WIGs.csv\")[\"WIG_ODZIEZ\"].dropna().to_numpy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dates_maper = DatesScraper.get_date_map(\"CCC\")\n",
+    "dates_maper = ds.get_date_map(\"CCC\")\n",
     "cis.scrap_data(\"CCC\")\n",
     "report = cis.get_report_index(CompanyIndexScraper.IndexType.COMPANY)\n",
     "report = dates_maper.join(report, how=\"inner\")\n",
@@ -504,15 +505,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (665404323.py, line 13)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[20], line 13\u001b[0;36m\u001b[0m\n\u001b[0;31m    for key in\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CCC\n",
+      "CDL\n",
+      "EAH\n",
+      "HRP\n",
+      "IPO\n",
+      "LBW\n",
+      "LPP\n",
+      "MIR\n",
+      "MON\n",
+      "PRT\n",
+      "SFG\n",
+      "SNW\n",
+      "WTN\n"
      ]
     }
    ],
@@ -527,89 +539,16 @@
     "}\n",
     "\n",
     "for ticker in COMPANY_TICKER_LIST:\n",
-    "    dates_maper = DatesScraper.get_date_map(ticker)\n",
+    "    dates_maper = ds.get_date_map(ticker)\n",
     "    cis.scrap_data(ticker)\n",
     "    for key in reports:\n",
     "        index = cis.get_report_index(key)\n",
-    "        index = dates_maper.join(report, how=\"inner\")\n",
+    "        index = dates_maper.join(index, how=\"inner\")\n",
     "        index.reset_index(drop=True, inplace=True)\n",
     "        index.insert(1, \"Ticker\", ticker)\n",
-    "        reports[key] = pd.concat([reports[key], index],\n",
-    "                                 ignore_index=True)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "report"
+    "        [key] = pd.concat([reports[key], index],\n",
+    "                                 ignore_index=True)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.DataFrame()\n",
-    "df = pd.concat([df, report.insert(1, \"Ticker\", \"ATR\")])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
