--- a/scrapers/CompanyIndexScraper.ipynb
+++ b/scrapers/CompanyIndexScraper.ipynb
@@ -496,39 +496,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dates_maper = ds.get_date_map(\"CCC\")\n",
-    "cis.scrap_data(\"CCC\")\n",
-    "report = cis.get_report_index(CompanyIndexScraper.IndexType.COMPANY)\n",
-    "report = dates_maper.join(report, how=\"inner\")\n",
-    "report.reset_index(drop=True, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CCC\n",
-      "CDL\n",
-      "EAH\n",
-      "HRP\n",
-      "IPO\n",
-      "LBW\n",
-      "LPP\n",
-      "MIR\n",
-      "MON\n",
-      "PRT\n",
-      "SFG\n",
-      "SNW\n",
-      "WTN\n"
-     ]
-    }
-   ],
-   "source": [
     "reports = {\n",
     "    CompanyIndexScraper.IndexType.COMPANY   : pd.DataFrame(),\n",
     "    CompanyIndexScraper.IndexType.SECTOR    : pd.DataFrame(),\n",
@@ -546,8 +513,18 @@
     "        index = dates_maper.join(index, how=\"inner\")\n",
     "        index.reset_index(drop=True, inplace=True)\n",
     "        index.insert(1, \"Ticker\", ticker)\n",
-    "        [key] = pd.concat([reports[key], index],\n",
+    "        reports[key] = pd.concat([reports[key], index],\n",
     "                                 ignore_index=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in CompanyIndexScraper.IndexType:\n",
+    "    reports[i].to_csv(f\"../database/reportData/WIG_ODZIEZ_{str(i).split(\".\")[-1]}.csv\")"
    ]
   }
  ],
